ingress/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: gbs-nodeport
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: gbs
  type: NodePort
